# HRAG

./: .gitignore  RAG_flow.drawio  README.md  docker-compose.yaml
api/: .env.example  .pre-commit-config.yaml  main.py  pyproject.toml  settings.py
api/docker/: Dockerfile  entrypoint.sh
api/hrag/models/: __init__.py  base_model.py  tenant.py  user.py
api/hrag/routers/: __init__.py  router.py
api/hrag/routers/v1/: __init__.py  conversations.py  documents.py  tenants.py
api/hrag/schema/: __init__.py  conversation.py  tenant.py
api/hrag/utils/: conversation.py  document.py  enums.py  exceptions.py  graph.py  llm_provider.py  prompts.py
api/hrag/utils/embeddings/: __init__.py  vectorstore.py
api/hrag/utils/embeddings/graph/: __init__.py  graph.py  transformer.py
api/migrations/: env.py
api/migrations/versions/: 09ff2f327925_init_migration.py
data/neo4j/: neo4j.conf
data/postgresql/: create-multiple-postgresql-databases.sh
